menu para desktop

--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ input,
 .card-container {
     margin-top: 100px;
     display: grid;
-    grid-template-columns: repeat(auto-fill,240px);
+    grid-template-columns: repeat(auto-fill, 240px);
     gap: 30px;
     place-content: center;
 }
@@ -250,11 +250,68 @@ input,
     cursor: pointer;
 }
 
-
 .fa-cart-plus {
     font-size: 2.5rem;
     color: white;
 }
+
+.desktop-menu {
+    display: flex;
+    justify-content: flex-end;
+    text-align: right;
+    width: 170px;
+    height: auto;
+    padding: 10px 10px 10px 10px;
+    background-color: white;
+    border: none;
+    border-radius: 5px;
+    box-shadow: -2px 2px 9px 2px rgba(102, 102, 102, 0.499);
+    -webkit-box-shadow: -2px 2px 9px 2px rgba(102, 102, 102, 0.499);
+    -moz-box-shadow: -2px 2px 9px 2px rgba(102, 102, 102, 0.499);
+}
+
+.desktop-menu ul li{
+    text-align: end;
+}
+
+.desktop-menu li {
+    list-style-type: none;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.desktop-menu a {
+    text-decoration: none;
+}
+
+.title-menu {
+    margin: 10px;
+    font-weight: bold;
+    font-size: var(--font-title-h2);
+    color: var(--primary-color);
+}
+
+.desktop-menu ul li:last-child{
+padding-top: 20px;
+border-top: solid 1px #3b47521b;
+}
+
+.desktop-menu ul li:last-child a{
+    margin: 5px;
+    font-size: var(--font-title-h3);
+    color: var(--secondary-color);
+    padding-right: 8px;
+}
+
+
+.desktop-menu ul li:last-child a:hover{
+    color: var(--hover-color);
+}
+
+.title-menu:hover {
+color: #676767;
+}
+
 
 @media(max-width: 640px) {
     .logo {
@@ -287,10 +344,8 @@ input,
     }
 
     .card-container {
-
-        grid-template-columns: repeat(auto-fill,120px);
+        grid-template-columns: repeat(auto-fill, 120px);
         gap: 30px;
-     
     }
 
     .service-img {
@@ -311,7 +366,6 @@ input,
         color: white;
     }
 
-
     .cart-container {
         display: flex;
         align-items: center;
@@ -325,6 +379,6 @@ input,
     .precios {
         font-size: 1.3rem;
     }
-       
+
 
 }
