--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ input,
     -moz-box-shadow: -2px 2px 9px 2px rgba(102, 102, 102, 0.499);
 }
 
-.desktop-menu ul li{
+.desktop-menu ul li {
     text-align: end;
 }
 
@@ -284,33 +284,157 @@ input,
     text-decoration: none;
 }
 
-.title-menu {
-    margin: 10px;
-    font-weight: bold;
-    font-size: var(--font-title-h2);
-    color: var(--primary-color);
+.desktop-menu ul li:last-child {
+    padding-top: 20px;
+    border-top: solid 1px #3b47521b;
 }
 
-.desktop-menu ul li:last-child{
-padding-top: 20px;
-border-top: solid 1px #3b47521b;
-}
-
-.desktop-menu ul li:last-child a{
+.desktop-menu ul li:last-child a {
     margin: 5px;
     font-size: var(--font-title-h3);
     color: var(--secondary-color);
     padding-right: 8px;
 }
 
-
-.desktop-menu ul li:last-child a:hover{
+.desktop-menu ul li:last-child a:hover {
     color: var(--hover-color);
 }
 
 .title-menu:hover {
-color: #676767;
+    color: #676767;
 }
+
+.title-menu {
+    font-weight: bold;
+    font-size: var(--font-title-h2);
+    color: var(--primary-color);
+    text-decoration: none;
+}
+
+.movil-menu-first {
+    text-decoration: none;
+    margin-bottom: 60px;
+    margin-top: 50px;
+    font-weight: bold;
+    font-size: var(--font-title-h3);
+}
+
+.movil-menu-first a {
+    text-decoration: none;
+    margin: 30px;
+    color: var(--primary-color);
+}
+
+.movil-menu-first li {
+    margin: 30px;
+    list-style: none;
+}
+
+.movil-menu-second {
+    text-decoration: none;
+    margin-bottom: 60px;
+    margin-top: 30px;
+    font-weight: bold;
+    font-size: var(--font-title-h3);
+    position: absolute;
+    bottom: 0;
+}
+
+.movil-menu-second a {
+    text-decoration: none;
+    margin: 30px;
+    font-weight: 300;
+    color: var(--primary-color);
+}
+
+.movil-menu-second li {
+    margin-left: 30px;
+    margin-bottom: 5px;
+    list-style: none;
+}
+
+.movil-menu-second ul li:last-child a {
+    color: var(--secondary-color);
+    font-weight: 400;
+}
+
+.line-menu {
+    width: 300px;
+    height: 1px;
+    background-color: #67676745;
+    margin: 50px;
+}
+
+.title-order{
+    font-size: var(--font-title-h3);
+    font-weight: bold;
+    margin: 40px;
+}
+
+.my-order-content {
+    display: flex;
+    justify-content: space-between;
+    margin: 30px;
+    align-items: center;
+    background-color: #d3d3d52c;
+    padding: 15px;
+    border-radius: 5px;
+}
+
+.my-order-content-date p:first-of-type {
+    font-size: var(--font-title-h3);
+    font-weight: bold;
+}
+
+.my-order-content-date p:last-of-type {
+    color: #8e8e8f;
+    font-size: var(--lg);
+}
+
+.my-order-content-value{
+    font-size: var(--font-title-h3);
+    font-weight: bold;
+}
+
+.my-order-content-items{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 15px;
+}
+
+.my-order-content-items p:last-of-type{
+    font-size: var(--font-title-h3);
+}
+
+.my-order-img{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.my-order-service-img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 15px;
+    margin-right: 20px;
+}
+
+.value-item{
+    font-weight: bold;
+}
+
+
+
+
+
+
+
+
+
 
 
 @media(max-width: 640px) {
@@ -379,6 +503,30 @@ color: #676767;
     .precios {
         font-size: 1.3rem;
     }
+
+    .my-order-content-items{
+         margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .my-order-service-img {
+        width: 70px;
+        height: 70px;
+        object-fit: cover;
+        border-radius: 15px;
+        margin-right: 10px;
+    }
+
+    .my-order-content {
+        margin: 20px;
+        align-items: center;
+    }
+
+    .title-order{
+        margin: 30px;
+    }
+
+
 
 
 }
